test_suite5/ALAN/test_suite/alan-2022-examples/failing/003910_mutation.alan
source O begin leave(/) end
